# DACOMPILER

./: .gitignore  CMakeLists.txt  README  clean_install.sh  execute_tests.sh  regenerate_tests.sh
doc/: ASTDump.txt  AST_attributes.txt  ActivationRecord.txt  CompilationUnit.class.violet.html  IR.txt  Node.class.violet.html  Node_expressions.class.violet.html  Scopes.txt  SymbolTable.txt  Tokenizer.txt  TypeInference.txt  changelog.txt  grammar.txt  passes.txt  spec.txt  test.txt  tests_description.txt  todo.txt
doc/Implementations_notes/: deferred_creation_of_nodes.txt
doc/versions/: version_0_1.txt
src/: AST.hpp  ASTVisitor.cpp  ASTVisitor.hpp  ASTVisitorCodeGenerator.cpp  ASTVisitorPrettyPrinter.cpp  ASTVisitorPrettyPrinter.hpp  CodeGenerator.cpp  CodeGenerator.h  Node.cpp  Node.h  VisitorCodeGenerator.cpp  VisitorPrettyPrinter.cpp  execute.sh  generate.sh  main.cpp  parser.y  test.txt  test1.txt
src/include/: AST.hpp  ASTVisitor.hpp  ASTVisitorCodeGenerator.hpp  ASTVisitorDump.hpp  ASTVisitorPrettyPrinter.hpp  ASTVisitorScopes.hpp  Class.hpp  CompilationUnit.hpp  ErrorLog.hpp  Function.hpp  LabelManager.hpp  LexicalScope.hpp  LnessRness.hpp  Locus.hpp  Node.h  Node.hpp  NodeClass.hpp  NodeExpr.hpp  NodeFunc.hpp  NodeStmt.hpp  NodeVar.hpp  Symbol.hpp  SymbolTable.hpp  TreeDecoration.hpp  TypeId.hpp  TypeTable.hpp  Types.hpp
src/include/AST/: AST.hpp  ASTNodes.hpp  ASTVisitor.hpp  Node.hpp  NodeClass.hpp  NodeExpr.hpp  NodeFunc.hpp  NodeStmt.hpp  NodeVar.hpp
src/include/ASTVisitors/: ASTVisitorDump.hpp  ASTVisitorLvalRval.hpp  ASTVisitorPrettyPrinter.hpp  ASTVisitorScopes.hpp  ASTVisitorTypeInference.hpp  DeferredNodesCreation.hpp  Dump.hpp  FullTraversal.hpp  LexicalScopeOfNode.hpp  LocalVarOffsets.hpp  LvalRval.hpp  PrettyPrinter.hpp  ResolveMemberTypes.hpp  Scopes.hpp  TypeCheck.hpp  TypeInference.hpp  VarIsMember.hpp  VarIsReadOrWrite.hpp  VarIsValueOrAddress.hpp
src/include/CodeGenerator/: RegisterAllocator.hpp
src/include/CodeGeneratorLogger/: FullLogger.hpp  Logger.hpp
src/include/ErrorLog/: Messages.hpp
src/include/IR/: IR.hpp  IRBuilder.hpp  IRGenerator.hpp  IRStream.hpp  IRSubtypes.hpp  Label.hpp  MemAddr.hpp  Offset.hpp
src/include/IR/Inst/: Functions.hpp  Jumps.hpp  MemAccess.hpp  Ops.hpp
src/include/Module/: ClassManager.hpp  FunctionManager.hpp  LabelManager.hpp  ScopeManager.hpp  TypeTable.hpp
src/include/Passes/: CheckLvalRval.hpp  ComputeLocalVarOffsets.hpp  ComputeVarIsValueOrAddress.hpp  DeferredNodesCreation.hpp  IRGenPass.hpp  LexicalScopeOfNode.hpp  Pass.hpp  PassManager.hpp  ResolveMemberTypes.hpp  TypeCheck.hpp  TypeInference.hpp  UninitalizedVariable.hpp  VarIsMember.hpp  VarIsReadOrWrite.hpp  VarIsValueOrAddress.hpp
src/include/Scopes/: HierarchicalScope.hpp  LexicalScope.hpp  Scope.hpp  ScopeId.hpp
src/include/Types/: BasicType.hpp  ClassType.hpp  FuncType.hpp  PtrType.hpp  TypeId.hpp
src/lib/: ASTVisitor.cpp  ASTVisitorCodeGenerator.cpp  ASTVisitorDump.cpp  ASTVisitorPrettyPrinter.cpp  CMakeLists.txt  LexicalScope.cpp  Node.cpp  TypeTable.cpp  main.cpp  parser.y  tokens.l
src/lib/ASTVisitors/: ASTVisitorDump.cpp  ASTVisitorPrettyPrinter.cpp  Dump.cpp  PrettyPrinter.cpp
src/lib/CodeGenerator/: RegisterAllocator.cpp
src/lib/IR/: IR.cpp  IRGenerator.cpp  IRStream.cpp
src/lib/Module/: TypeTable.cpp
src/lib/Passes/: TypeInference.cpp
src/lib/Scopes/: LexicalScope.cpp
src/tests/: CMakeLists.txt  test3.txt  test4.txt
src/tests/verification/: CMakeLists.txt  test1.bc.ver  test1.ver  test2.bc.ver  test2.ver  test3.bc.ver  test3.ver  test4.bc.ver  test4.ver
